# RCS-sleep-pipeline

./: .gitignore  CONFIG_MAPPINGS.md  GITHUB_SETUP.md  PHASE2_COMPLETE.md  PREPROCESSING_INFO.md  README.md  REORGANIZATION_STATUS.md  RESULTS_STRUCTURE.md  TEST_RESULTS.md  pyproject.toml
configs/: README.md  config_states.yaml  freq_bands.yaml  lfp_transition.yaml  pipeline_main.yaml  plot_config.yaml  plot_statistics.yaml  sleep_scoring.yaml  states_labels.yaml  transitions.yaml
scripts/: analyze_transitions.py  plot_coherence.py  plot_freq_bands.py  plot_psd.py  plot_slow_waves.py  plot_transitions.py  run_coherence.py  run_forward_fill.py  run_freq_bands.py  run_pipeline.py  run_preprocessing.py  run_slow_waves.py  run_transitions.py
src/rcssleep/io/: loaders.py
src/rcssleep/signals/: bandpower.py  coherence.py  filtering.py
src/rcssleep/utils/: logging.py  sleep_stages.py
